[project]
name = "metaboatrace.timekit"
version = "0.1.1"
description = "Shared timezone helpers (instant=UTC / civil-date=JST) for the metaboatrace pipeline"
authors = [
    { name = "k0kishima", email = "okishimaxyz@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.13"
license = "MIT"

[dependency-groups]
dev = [
    "mypy>=1.10.1",
    "pre-commit>=4.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["metaboatrace"]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "N",    # pep8-naming
    "RET",  # flake8-return
    "PIE",  # flake8-pie
    "ISC",  # flake8-implicit-str-concat
    "T10",  # flake8-debugger
    "DTZ",  # flake8-datetimez
    "ERA",  # eradicate (commented-out dead code)
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF001", # String contains ambiguous unicode character
    "RUF002", # Docstring contains ambiguous unicode character
    "RUF003", # Comment contains ambiguous unicode character
    "W293",   # whitespace on blank line (conflicts with docstring formatting)
    "ISC001", # single-line implicit string concat (conflicts with formatter)
    "RET504", # unnecessary assignment before return (readability)
    "N818",   # exception name should end in Error (existing naming convention)
    "DTZ007", # naive datetime from strptime (localized after parse)
]

[tool.ruff.lint.per-file-ignores]
# timekit のテストは naive/aware の変換を検証するため naive datetime を明示的に作る。
"tests/*" = ["ARG001", "ARG002", "DTZ001", "DTZ005", "DTZ011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
